Add export endpoints to Swagger
