# apps/admin_api/lib/admin_api/v1/router.ex
@@ -26,7 +26,6 @@ defmodule AdminAPI.V1.Router do
     post("/export.all", ExportController, :all)
     post("/export.get", ExportController, :get)
     post("/export.download", ExportController, :download)
-    get("/export.download", ExportController, :download)
 
     # Exchange pair endpoints
     post("/exchange_pair.all", ExchangePairController, :all)
